--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/dots-style.css">
 </head>
 <body>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/bundle.js"></script>
     <header class="header">
         <div class="header__left-block">
             <div class="header__logo">
@@ -145,8 +145,8 @@
                     Ваш пол
                 </div>
                 <div class="calculating__choose" id="gender">
-                    <div class="calculating__choose-item calculating__choose-item_active">Женщина</div>
-                    <div class="calculating__choose-item">Мужчина</div>
+                    <div id="female" class="calculating__choose-item">Женщина</div>
+                    <div id="male" class="calculating__choose-item">Мужчина</div>
                 </div>
 
                 <div class="calculating__subtitle">
@@ -162,10 +162,10 @@
                     Выберите вашу физическая активность
                 </div>
                 <div class="calculating__choose calculating__choose_big">
-                    <div id="low" class="calculating__choose-item">Низкая активность </div>
-                    <div id="small"  class="calculating__choose-item calculating__choose-item_active">Невысокая активность</div>
-                    <div id="medium" class="calculating__choose-item">Умеренная активность</div>
-                    <div id="high" class="calculating__choose-item">Высокая активность</div>
+                    <div data-activity="1.2" id="low" class="calculating__choose-item">Низкая активность </div>
+                    <div data-activity="1.375" id="small"  class="calculating__choose-item">Невысокая активность</div>
+                    <div data-activity="1.55" id="medium" class="calculating__choose-item">Умеренная активность</div>
+                    <div data-activity="1.725" id="high" class="calculating__choose-item">Высокая активность</div>
                 </div>
 
                 <div class="calculating__divider"></div>
